<resources>
    <string name="app_name">Aid Hub</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">LOGIN</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_you_have_an_account">Don\'t you have an account?</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="message_content">Message content</string>
    <string name="timestamp">Timestamp</string>
    <string name="image_post">Image post</string>
    <string name="user_profile_picture">User Profile picture</string>
    <string name="message_content_goes_here">Message content goes here</string>
    <string name="reports">Reports</string>
    <string name="new_report">New Report</string>
    <string name="enter_report_content">Enter report content.</string>
    <string name="upload_media">Upload Media</string>
    <string name="submit_report">Submit Report</string>
    <string name="chats">Chats</string>
    <string name="users">Users</string>
    <string name="groups">Groups</string>
    <string name="profile_image">Profile Image</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="send">Send</string>
    <string name="type_a_message">Type a message</string>
    <string name="message">Message</string>
    <string name="new_group">New Group</string>
    <string name="group_name">Group Name</string>
    <string name="admin_id">Admin ID</string>
    <string name="created_at">Created At</string>
    <string name="enter_group_name">Enter group name.</string>
    <string name="create_group">Create group.</string>
    <string name="add_users">Add Users</string>
    <string name="notification">Notification</string>
    <string name="title_activity_notification_handler">NotificationHandlerActivity</string>
    <string name="user">User</string>
    <string name="displayed_image">Displayed image</string>
    <string name="profile">Profile</string>
    <string name="profile_picture_holder">Profile picture holder</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="names">Names</string>
    <string name="logout_button">logout button</string>
    <string name="title_activity_admin_dashboard">AdminDashboardActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_user_dashboard">UserDashboardActivity</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="welcome">Welcome</string>
    <string name="role">Role</string>
    <string name="time">-:-</string>
    <string name="chat">Chat</string>
    <string name="new_chat">New Chat</string>
    <string name="select_sender">Select Sender</string>
    <string name="select_receiver">Select Receiver</string>
    <string name="create_chat">Create Chat</string>
    <string name="available_services">Available Services</string>
    <string name="add_new_service">Add New Service</string>
    <string name="edit_service">Edit Service</string>
    <string name="brief_description_of_the_service">Brief description of the service</string>
    <string name="service_title">Service Title</string>
    <string name="save">Save</string>
    <string name="service_description">Service Description</string>
    <string name="add_service">Add Service</string>
    <string name="manage_aid_services">Manage Aid Services</string>
    <string name="aid">Aid</string>
    <string name="aid_management">Aid Management</string>
    <string name="request_aid">Request Aid</string>
    <string name="describe_your_need">Describe your need</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="profile_picture_image">Profile picture image</string>
    <string name="user_type">User Type</string>
    <string name="membership_date">Membership date</string>
    <string name="change_photo">Change Photo</string>
    <string name="edit_details">Edit Details</string>
    <string name="attach_image">Attach image</string>
    <string name="message_image">Message Image</string>
    <string name="image_view">Image view</string>
    <string name="launcher_image">Launcher Image</string>
    <string name="aid_hub">AID HUB</string>
    <string name="amenity_name">Amenity Name</string>
    <string name="category">Category</string>
    <string name="amenities">Amenities</string>
    <string name="add_new_amenity">Add New Amenity</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="select_category">Select category</string>
    <string name="pick_amenity_location">Pick Amenity Location</string>
    <string name="aid_reports">Aid Reports</string>
    <string name="service">Service</string>
    <string name="aid_seeker">Aid Seeker</string>
    <string name="aid_provider">Aid Provider</string>
    <string name="provided_date">Provided Date</string>
    <string name="report_description">Report Description</string>
</resources>