<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="admin_nav_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_admin_aid"
            android:title="@string/aid" />

        <item
            android:id="@+id/nav_admin_aid_management"
            android:title="@string/aid_management" />

        <item
            android:id="@+id/nav_user_management"
            android:title="@string/user" />

        <item
            android:id="@+id/nav_admin_chats"
            android:title="@string/chats" />

        <item
            android:id="@+id/nav_admin_groups"
            android:title="@string/groups" />

        <item
            android:id="@+id/nav_user_profile"
            android:title="@string/profile" />

    </group>
</menu>