<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:elevation="4dp"
    android:layout_margin="8dp" >

    <TextView
        android:id="@+id/service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/service"
        android:textStyle="bold"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/seekerId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aid_seeker"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/providerId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aid_provider"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/providedDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/provided_date"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/reportDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report_description"
        android:textSize="14sp" />

</LinearLayout>
