<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".amenities.form.NewAmenityActivity"
    android:padding="16dp">

    <EditText
        android:id="@+id/etAmenityName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/amenity_name"
        android:inputType="textPersonName" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_category" />

    <Spinner
        android:id="@+id/etCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:tooltipText="Select Category"
        android:layout_margin="16dp" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:autofillHints="name"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btnAmenityLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_amenity_location"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnSaveAmenity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="16dp" />
</LinearLayout>
