<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_user_management">

    <fragment
        android:id="@+id/nav_user_management"
        android:name="com.example.aidhub.admin.ui.userManagement.UserListFragment"
        android:label="@string/user"
        tools:layout="@layout/fragment_user_management" />

    <fragment
        android:id="@+id/nav_admin_chats"
        android:name="com.example.aidhub.admin.ui.chats.MessagesFragment"
        android:label="@string/chats"
        tools:layout="@layout/fragment_messages" />

    <fragment
        android:id="@+id/nav_admin_groups"
        android:name="com.example.aidhub.groups.GroupsFragment"
        android:label="@string/groups"
        tools:layout="@layout/fragment_groups" />

</navigation>