<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="?attr/selectableItemBackground">

    <TextView
        android:id="@+id/groupNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingBottom="4dp" />

    <TextView
        android:id="@+id/groupAdminTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_id"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/groupCreatedAtTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/created_at"
        android:textSize="14sp" />
</LinearLayout>