<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <!-- Sender Selection Button -->
    <Button
        android:id="@+id/buttonSelectSender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_sender"
        android:layout_marginBottom="16dp"/>

    <!-- Receiver Selection Button -->
    <Button
        android:id="@+id/buttonSelectReceiver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_receiver"
        android:layout_below="@id/buttonSelectSender"
        android:layout_marginBottom="16dp"/>

    <!-- Create Chat Button -->
    <Button
        android:id="@+id/buttonCreateChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_chat"
        android:layout_below="@id/buttonSelectReceiver"/>

</RelativeLayout>
