<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <Button
        android:id="@+id/addUserButton"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:text="@string/add_users"
        android:visibility="gone"
        android:onClick="onAddUserButtonClick" />

    <!-- RecyclerView to display chat messages -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/groupMessagesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp"
        android:scrollbars="vertical"/>

    <!-- Bottom layout for message input and send button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <!-- Message input field -->
        <EditText
            android:id="@+id/messageInputEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="name"
            android:inputType="textLongMessage"
            android:hint="@string/type_a_message"
            android:maxLines="4"
            android:minHeight="48dp"/>

        <!-- Send button -->
        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/send"/>

    </LinearLayout>
</LinearLayout>